syntax = "proto3";
package realionetwork.asset.v1;

option go_package = "github.com/realiotech/realio-network/x/asset/priviledges/clawback";

import "cosmos_proto/cosmos.proto";

message MsgClawbackToken {
    string account = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
    string token_id = 2;
    uint64 amount = 3;
}